<resources>
    <string name="app_name">SportApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="etLoginEmail">Email</string>
    <string name="etLoginPassword">Password</string>
    <string name="bnLogin">Log in</string>
    <string name="bnSignIn">SIGN IN</string>
    <string name="NewAccount"><u>Register a new account</u></string>
    <string name="AppName">SPORTER</string>
    <string name="UserName">Username</string>
    <string name="RepeatPassword">Repeat Password</string>
    <string name="error_input_empty">The fields must not be empty</string>
    <string name="error_password_too_short">The password must be at least %d digits long</string>
    <string name="error_username_too_short">The username can\'t have less than %d characters</string>
    <string name="error_username_too_long">The username can\'t have more than %d characters</string>
    <string name="error_not_a_valid_email">Please enter a valid E-Mail</string>
    <string name="error_incorrectly_repeated_password">The passwords do not match</string>
    <string name="error_invalid_credentials">The E-Mail or password is incorrect</string>
    <string name="successfully_register">Successfully registered a new account</string>
    <string name="successfully_log">Successfully loged in</string>
    <string name="webClientId">1072225620886-66orfsgtcejsf5gftjkk6fkh6vdadths.apps.googleusercontent.com</string>
    <string name="go_to_email">Go to your email for changing the password</string>
    <string name="google_access">Access with Google</string>
    <string name="MyCategories">Перейти к любимой категории</string>
    <string name="error_while_refreshing">Не удалось обновить, попробуйте позже</string>
    <string name="refreshing_complete">Лента обновлена</string>
    <string name="no_fresh_news">Нет недавних новостей</string>
    <string name="log_in_failed">Log in failed</string>
</resources>



















