<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.fragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvRegisterTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="156dp"
            android:text="@string/AppName"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegisterTittle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edRegisterEmail"
                android:layout_width="300dp"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/etLoginEmail">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edRegisterUsername"
                android:layout_width="300dp"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/UserName">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput2"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edRegisterPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/etLoginPassword"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/textInput3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edRegisterRepeatedPassword"
                android:layout_width="300dp"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/RepeatPassword">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="52dp"
            android:text="@string/bnSignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput4">

        </Button>

        <ProgressBar
            android:id="@+id/registerProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput4" />





    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>